# advent-of-code-2024

./: README.md  pyproject.toml
2023/P2/: code.ipynb
2024/problem_1/: code.ipynb
2024/problem_2/: code.ipynb
2024/problem_3/: code.ipynb
2024/problem_4/: code.ipynb
example-problem/: scratchpad.ipynb  statement.txt
problem_2/: 2024_P2.ipynb
