[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.15.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]
